@@ -21,12 +21,15 @@
 	</p>
 <h2>Active Developers</h2>
 <ul>
+<li>Lachlan Andrew for much testing, debugging, continual help and cracking of the whip.</li>
 <li>Gabriele Bartolini for the new htnet and date/time code and continual help.</li>
+<li>Jim Cole for testing, debugging, and being a big help on the mailing lists.</li>
 <li>Loic Dachary for Berkeley DB compression, automake/libtool customization, word database implementation, regression tests, fixes using Purify.</li>
 <li>Gilles Detillieux for uncountable bug-fixes, feature enhancements, RedHat RPMs, and documentation updates.</li>
 <li>Geoff Hutchison for filling in as maintainer, dreaming up implementations, and handling many of the little details.</li>
 <li>Torsten Neuer for a variety of bug-fixes, suggestions, and the contributed PHP wrapper.</li>
 <li>Toivo Pedaste for fixing memory leaks and various bugs and contributing md5 duplicate-detection code.</li>
+<li>Neal Richter for the native Win32 port, libhtdig development, testing and debugging.</li>
 <li>Quim Sanmarti for providing a new htsearch query parser in qtest.</li>
 </ul>
 <h2>Additional Contributors:</h2>
@@ -92,6 +95,6 @@
 <li>And many others who made bug reports and suggested changes to the code!</li>
 	  </ul>
 	<hr size="4" noshade>
-		Last modified: $Date: 2003/06/24 21:07:01 $
+		Last modified: $Date: 2003/10/27 21:59:09 $
   </body>
 </html>
